--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,19 +1,16 @@
-*, :after, :before {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+header {
+  background-color: #40e0b5;
+  padding: 15px 0;
 }
 
-body {
-  min-width: 320px;
-  min-height: 100vh;
+.flex-between-center{
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  overflow: hidden;
-  padding: 0 15px;
+.logo-box {
+  img {
+    width: 70%;
+  }
 }
