--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
 <app-header></app-header>
 <app-nav></app-nav>
 <router-outlet></router-outlet>
-<h1>
-  {{title}}
-</h1>
+<app-footer></app-footer>
