--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,3 +20,12 @@ body {
   overflow: hidden;
   padding: 0 15px;
 }
+
+.flex-space-around {
+  display: flex;
+  justify-content: space-around;
+}
+.flex-wrap{
+  display: flex;
+  flex-wrap: wrap;
+}
