Style details in main and set root.

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -3,13 +3,13 @@
   <div class="details">
     <div class="container flex-wrap">
       <div class="item" *ngFor="let item of viewImg">
-        <a routerLink=""
+        <a routerLink="detail"
            routerLinkActive="active"
            [routerLinkActiveOptions]="{exact: true}"
            [style.background-image]="'url(' + item.url+')'"
            >
         </a>
-        <p class="title">hashhash</p>
+        <p class="title">{{item.title}}</p>
       </div>
     </div>
   </div>
