--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -4,14 +4,18 @@ app-main {
 
 .details {
   padding: 50px 0;
+  background-image: url("../../assets/images/cinema-background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 20%;
 
   .item {
     flex-basis: calc(100% / 3);
-    padding: 10px 0;
+    padding: 10px 5px;
     position: relative;
 
     a {
-      width: 350px;
+      width: 100%;
       height: 150px;
       display: block;
       background-repeat: no-repeat;
@@ -21,13 +25,19 @@ app-main {
       opacity: .7;
       transition: .5s;
     }
-    
+
     .title {
       position: absolute;
       opacity: 0;
+      left: 0;
+      text-align: center;
+      right: 0;
       color: #c7c7cc;
-      top: -100%;
+      top: -30%;
       transition: .5s;
+      font-size: 18px;
+      font-weight: bold;
+      background: rgba(0,0,0,0.6);
     }
 
     &:hover {
