Create object in service, work on subpage details.

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -3,11 +3,11 @@
   <div class="details">
     <div class="container flex-wrap">
       <div class="item" *ngFor="let item of viewImg">
-        <a routerLink="detail"
+        <a [routerLink]="'detail/' + item.title+ ''"
            routerLinkActive="active"
            [routerLinkActiveOptions]="{exact: true}"
            [style.background-image]="'url(' + item.url+')'"
-           >
+        >
         </a>
         <p class="title">{{item.title}}</p>
       </div>
