--- a/src/app/view-detail/view-detail.component.scss
+++ b/src/app/view-detail/view-detail.component.scss
@@ -1,16 +1,31 @@
-app-view-detail{
+app-view-detail {
   flex: 1;
+  display: flex;
+  align-items: center;
 }
+
+.detail-section {
+  width: 100%;
+}
+
 .img-block {
-  img{
+  img {
     max-width: 100%;
   }
 }
+
 .view-detail {
-  background-color: #daf9f1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
   p {
     font-size: 18px;
-    font-weight: 600;
     padding: 5px;
+  }
+
+  a {
+    cursor: pointer;
   }
 }
