--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,3 +29,18 @@ body {
   display: flex;
   flex-wrap: wrap;
 }
+
+
+.btn-primary{
+  background-color: #40e0b5;
+  text-decoration: none;
+  padding: 10px 15px;
+  border-radius: 4px;
+  color: #9f9fa7;
+  transition: .3s;
+
+  &:hover{
+    background-color: #168a6b;
+    color: #daf9f1;
+  }
+}
