Rename of variables.

--- a/src/app/cinemas/cinemas.component.scss
+++ b/src/app/cinemas/cinemas.component.scss
@@ -29,6 +29,7 @@
   .cinemas-list{
     list-style: none;
     padding: 0;
+    min-width: 220px;
     a {
       color: black;
       font-size: 17px;
