Finish function of reservation seats.

--- a/src/app/cinemas/cinemas.component.html
+++ b/src/app/cinemas/cinemas.component.html
@@ -1,4 +1,4 @@
-<div class="cinemas-section">
+<div class="cinemas-section cinema-background">
   <div class="container">
       <div>
         <h2>Our Cinemas</h2>
