--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,3 +44,29 @@ body {
     color: #daf9f1;
   }
 }
+
+.cinema-background{
+  background-image: url('assets/images/cinema-background.jpg');
+  max-width: 100%;
+  height: 673px;
+  background-size: cover;
+  background-position: 50% 13%;
+  background-repeat: no-repeat;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  position: relative;
+
+  &:after{
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 0;
+    background-color: rgba(255, 255, 255, 0.5);}
+}
